swagger, testes e jwt funcionando